added birthday wises

--- a/index.html
+++ b/index.html
@@ -11,12 +11,34 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> -->
 </head>
 
 <body>
-    <div class="loader absolute z-40 h-screen w-screen top-0 text-white flex justify-center content-center"> 
-        <lottie-player src="https://lottie.host/e0a9a6c0-6f40-4c16-9de5-596df6fe76e6/VF9Qw6l8xI.json" speed="1" loop autoplay mode="normal"></lottie-player>
+    <div class="loader absolute z-40 h-screen w-screen top-0 text-white flex flex-col content-center">
+        <!-- <lottie-player src="https://lottie.host/e0a9a6c0-6f40-4c16-9de5-596df6fe76e6/VF9Qw6l8xI.json" speed="1" loop autoplay mode="normal"></lottie-player> -->
+        <div class="birthday-wishes-text">
+            <div class="overflow-hidden">
+                <h1 class="happy transformY">Happy</h1>
+            </div>
+            <div class="overflow-hidden">
+                <h1 class="birthday transformY">Birthday</h1>
+            </div>
+            <div class="overflow-hidden">
+                <h1 class="adhya transformY">Adhya</h1>
+            </div>
+        </div>
+        <div class="gift-text">
+            <div class="overflow-hidden">
+                <h1 class="from transformY">from today</h1>
+            </div>
+            <div class="overflow-hidden">
+                <h1 class="own transformY">you own</h1>
+            </div>
+            <div class="overflow-hidden">
+                <h1 class="domain transformY">Adhyasbhat.tech</h1>
+            </div>
+        </div>
     </div>
     <div class="wrapper">
         <div class="hero-text text-red-600 opacity-95 flex justify-center flex-col">
@@ -40,7 +62,7 @@
         </section>
         <section class="skills z-10">
             <div class="skills-heading absolute">
-                <h1 class="text-red-600 z-20">Things <br> I am <br> good at</h1>
+                <h1 class="text-red-600 z-20">Things <br> I am <br> Good at</h1>
             </div>
             <div class="marquee-container">
                 <div class="marquee">
