added linkedin redirect on click event

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section class="experience z-30">
             <div class="exp-heading absolute">
                 <h1 class="text-red-600 z-20"><br>To know More about My work</h1>
-                <h1 class="z-20 underline-span"><span class="underline text-red-600">Click here</span>
+                <h1 class="z-20 underline-span"><span class="underline text-red-600 clickMe">Click here</span>
                 </h1>
             </div>
         </section>
